--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <textarea id="text"></textarea>
     <br>
     <button id="submitButton">submit</button>
+    <button id="submitButton2">submit</button>
     <br>
     <br>
     <br>
