--- a/index.html
+++ b/index.html
@@ -7,25 +7,42 @@
 </head>
 <body>
     <button id="button1" onclick="vote(1)">Vote 1</button>
-    <p id="voteCount1">투표 수: 10</p>
+    <p id="voteCount1">투표 수: 0</p>
 
     <button id="button2" onclick="vote(2)">Vote 2</button>
-    <p id="voteCount2">투표 수: 5</p>
+    <p id="voteCount2">투표 수: 0</p>
 
     <button id="button3" onclick="vote(3)">Vote 3</button>
-    <p id="voteCount3">투표 수: 7</p>
+    <p id="voteCount3">투표 수: 0</p>
 
     <script>
+        // 페이지 로드 시 초기값 설정
+        document.addEventListener('DOMContentLoaded', async function () {
+            try {
+                // 서버에서 현재 투표 상태 가져오기
+                const response = await fetch(`https://testfunctionxx.azurewebsites.net/api/HttpTrigger3`);
+                const data = await response.json();
+
+                if (data.success) {
+                    // 서버에서 받아온 초기값으로 UI 업데이트
+                    data.votes.forEach(vote => {
+                        const voteCountElement = document.getElementById(`voteCount${vote.id}`);
+                        voteCountElement.textContent = `투표 수: ${vote.cnt}`;
+                    });
+                } else {
+                    console.error('Failed to get initial vote counts:', data.message);
+                }
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        });
+
         // 투표 함수
         async function vote(id) {
             try {
                 // 서버에 투표 요청 보내기
-                const response = await fetch(`http://localhost:3000/api/vote`, {
+                const response = await fetch(`https://testfunctionxx.azurewebsites.net/api/HttpTrigger3?id=${id}`, {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ id }),
                 });
 
                 // 서버로부터 받은 응답 처리
