--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button id="button1" onclick="vote(1)">Vote 1</button>
-    <p id="voteCount1">투표 수: 0</p>
+    <p id="voteCount1">투표 수: 1</p>
 
     <button id="button2" onclick="vote(2)">Vote 2</button>
     <p id="voteCount2">투표 수: 0</p>
@@ -20,7 +20,7 @@
         document.addEventListener('DOMContentLoaded', async function () {
             try {
                 // 서버에서 현재 투표 상태 가져오기
-                const response = await fetch(`https://testfunctionxx.azurewebsites.net/api/HttpTrigger3`);
+                const response = await fetch(`https://testfunctionxx.azurewebsites.net/api/myfunction`);
                 const data = await response.json();
 
                 if (data.success) {
@@ -41,7 +41,7 @@
         async function vote(id) {
             try {
                 // 서버에 투표 요청 보내기
-                const response = await fetch(`https://testfunctionxx.azurewebsites.net/api/HttpTrigger3?id=${id}`, {
+                const response = await fetch(`https://testfunctionxx.azurewebsites.net/api/myfunction?id=${id}`, {
                     method: 'POST',
                 });
 
