--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 document.getElementById('executeFunction').addEventListener('click', async () => {
     try {
         // Azure Function을 호출하는 부분
-        const response = await fetch('/api/yourFunctionName'); // 함수의 경로에 따라 수정
+        const response = await fetch('https://testsdaasasd.azurewebsites.net/api/HttpTrigger1'); // 함수의 경로에 따라 수정
         const data = await response.json();
         
         // 결과를 웹페이지에 표시
