--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azure Static Web App Example</title>
+    <title>Pets Count Example</title>
 </head>
 <body>
 
@@ -16,20 +16,16 @@
 document.addEventListener('DOMContentLoaded', async () => {
     try {
         // Azure Function을 호출하는 부분
-        const response = await fetch('https://testsdaasasd.azurewebsites.net/api/HttpTrigger2');
+        const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
         const data = await response.json();
         
         // 결과를 웹페이지에 표시
         const resultElement = document.getElementById('result');
-        resultElement.innerHTML = '<h2>User List:</h2>';
+        resultElement.innerHTML = '<h2>Pets Count:</h2>';
 
-        if (Array.isArray(data)) {
-            data.forEach(user => {
-                resultElement.innerHTML += `<p>ID: ${user.id}, Username: ${user.username}</p>`;
-            });
-        } else {
-            resultElement.innerHTML = '<p>No user data available</p>';
-        }
+        data.forEach(pet => {
+            resultElement.innerHTML += `<p>${pet.name}: ${pet.cnt}</p>`;
+        });
     } catch (error) {
         console.error('Error:', error);
     }
