--- a/index.html
+++ b/index.html
@@ -20,69 +20,42 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
-    // 초기화 함수 호출
-    await initializeVotes();
-
     const buttons = document.querySelectorAll('button');
 
     buttons.forEach(button => {
         button.addEventListener('click', async () => {
             try {
-                // 버튼 이름과 투표 수 업데이트 함수 호출
                 const petName = button.textContent;
                 await updateVote(petName);
-                // 업데이트된 결과 표시 함수 호출
-                await displayResults(petName);
+                await displayResults();
             } catch (error) {
                 console.error('Error:', error);
             }
         });
     });
+
+    await initializeVotes();
+    await displayResults();
 });
 
-// 초기화 함수
 async function initializeVotes() {
-    try {
-        // 서버로부터 초기 투표 결과 가져오기
-        const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
-        const data = await response.json();
-
-        // 초기 투표 결과를 웹페이지에 표시
-        data.forEach(pet => {
-            const resultElement = document.getElementById(`${pet.name}Result`);
-            resultElement.textContent += pet.cnt;
-        });
-    } catch (error) {
-        console.error('Error:', error);
-    }
+    await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
 }
 
-// 투표 수 업데이트 함수
 async function updateVote(petName) {
-    try {
-        // 서버로 투표 업데이트 요청 보내기
-        const response = await fetch(`https://testsdaasasd.azurewebsites.net/api/vote?petName=${petName}`);
-        if (!response.ok) {
-            throw new Error(`HTTP error! Status: ${response.status}`);
-        }
-    } catch (error) {
-        console.error('Error:', error);
-    }
+    await fetch(`https://testsdaasasd.azurewebsites.net/api/vote?petName=${petName}`);
 }
 
-// 결과 표시 함수
-async function displayResults(petName) {
-    try {
-        // 서버로부터 업데이트된 투표 결과 가져오기
-        const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
-        const data = await response.json();
+async function displayResults() {
+    const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
+    const data = await response.json();
 
-        // 업데이트된 결과를 웹페이지에 표시
-        const resultElement = document.getElementById(`${petName}Result`);
-        resultElement.textContent = `투표 수: ${data.find(pet => pet.name === petName).cnt}`;
-    } catch (error) {
-        console.error('Error:', error);
-    }
+    data.forEach(pet => {
+        const resultElement = document.getElementById(`${pet.name}Result`);
+        if (resultElement) {
+            resultElement.textContent = `투표 수: ${pet.cnt}`;
+        }
+    });
 }
 </script>
 
