--- a/index.html
+++ b/index.html
@@ -5,58 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Voting Example</title>
+    <title>Pets Count Example</title>
 </head>
 <body>
 
-<!-- 버튼 및 결과 엘리먼트 추가 -->
-<button id="dogButton">강아지</button>
-<button id="catButton">고양이</button>
-<button id="parrotButton">앵무새</button>
-
-<div id="dogResult">투표 수: </div>
-<div id="catResult">투표 수: </div>
-<div id="parrotResult">투표 수: </div>
+<!-- 결과를 표시할 엘리먼트 추가 -->
+<div id="dogResult">강아지 투표 수: </div>
+<div id="catResult">고양이 투표 수: </div>
+<div id="parrotResult">앵무새 투표 수: </div>
 
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
-    const buttons = document.querySelectorAll('button');
-
-    buttons.forEach(button => {
-        button.addEventListener('click', async () => {
-            try {
-                const petName = button.textContent;
-                await updateVote(petName);
-                await displayResults();
-            } catch (error) {
-                console.error('Error:', error);
+    try {
+        // Azure Function을 호출하는 부분
+        const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
+        const data = await response.json();
+        
+        // 결과를 웹페이지에 표시
+        data.forEach(pet => {
+            const resultElement = document.getElementById(`${pet.name.toLowerCase()}Result`);
+            if (resultElement) {
+                resultElement.innerHTML = `<h2>${pet.name} 투표 수:</h2><p>${pet.cnt}</p>`;
             }
         });
-    });
-
-    await initializeVotes();
-    await displayResults();
+    } catch (error) {
+        console.error('Error:', error);
+    }
 });
-
-async function initializeVotes() {
-    await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
-}
-
-async function updateVote(petName) {
-    await fetch(`https://testsdaasasd.azurewebsites.net/api/vote?petName=${petName}`);
-}
-
-async function displayResults() {
-    const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
-    const data = await response.json();
-
-    data.forEach(pet => {
-        const resultElement = document.getElementById(`${pet.name}Result`);
-        if (resultElement) {
-            resultElement.textContent = `투표 수: ${pet.cnt}`;
-        }
-    });
-}
 </script>
 
 </body>
