--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ async function vote(petName) {
         // 업데이트된 전체 투표 결과 가져오기
         const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
         const data = await response.json();
+        data.sort((a, b) => {
+            const order = { '강아지': 1, '고양이': 2, '앵무새': 3 };
+            return order[a.name] - order[b.name];
+        });
 
         // 결과를 웹페이지에 표시
         const resultElement = document.getElementById('result');
@@ -58,6 +62,10 @@ document.addEventListener('DOMContentLoaded', async () => {
     try {
         const response = await fetch('https://testsdaasasd.azurewebsites.net/api/initial_value');
         const data = await response.json();
+        data.sort((a, b) => {
+            const order = { '강아지': 1, '고양이': 2, '앵무새': 3 };
+            return order[a.name] - order[b.name];
+        });
         
         const resultElement = document.getElementById('result');
         resultElement.innerHTML = '<h2>전체 투표 수</h2>';
