--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+<!-- 이미지를 표시할 엘리먼트 추가 -->
+<img id="dogImage" src="https://image2019305009.blob.core.windows.net/image/dog.jpg" alt="Dog Image">
+<img id="catImage" src="https://image2019305009.blob.core.windows.net/image/cat.jpg" alt="Cat Image">
+<img id="parrotImage" src="https://image2019305009.blob.core.windows.net/image/parrot.jpg" alt="Parrot Image">
+
+
 <!-- 결과를 표시할 엘리먼트 추가 -->
 <p>당신이 가장 선호하는 애완 동물을 선택해주세요!</p>
 <button id="dogButton">강아지</button>
