--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
 <!-- 오디오 엘리먼트 추가 -->
-<audio id="dogSound" src="https://image2019305009.blob.core.windows.net/sound/dog.mp3"></audio>
-<audio id="catSound" src="https://image2019305009.blob.core.windows.net/sound/cat.mp3"></audio>
-<audio id="parrotSound" src="https://image2019305009.blob.core.windows.net/sound/parrot.mp3"></audio>
+<audio id="강아지Sound" src="https://image2019305009.blob.core.windows.net/sound/dog.mp3"></audio>
+<audio id="고양이Sound" src="https://image2019305009.blob.core.windows.net/sound/cat.mp3"></audio>
+<audio id="앵무새Sound" src="https://image2019305009.blob.core.windows.net/sound/parrot.mp3"></audio>
 
 <!-- 이미지를 표시할 엘리먼트 추가 -->
 <img id="dogImage" src="https://image2019305009.blob.core.windows.net/image/dog.jpg" alt="Dog Image">
