--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
 <!-- 오디오 엘리먼트 추가 -->
-<audio id="강아지Sound" src="https://image2019305009.blob.core.windows.net/sound/dog.mp3"></audio>
-<audio id="고양이Sound" src="https://image2019305009.blob.core.windows.net/sound/cat.mp3"></audio>
-<audio id="앵무새Sound" src="https://image2019305009.blob.core.windows.net/sound/parrot.mp3"></audio>
+<audio id="강아지Sound" src="https://data2019305009.blob.core.windows.net/sound/dog.mp3"></audio>
+<audio id="고양이Sound" src="https://data2019305009.blob.core.windows.net/sound/cat.mp3"></audio>
+<audio id="앵무새Sound" src="https://data2019305009.blob.core.windows.net/sound/parrot.mp3"></audio>
 
 <!-- 이미지를 표시할 엘리먼트 추가 -->
-<img id="dogImage" src="https://image2019305009.blob.core.windows.net/image/dog.jpg" alt="Dog Image">
-<img id="catImage" src="https://image2019305009.blob.core.windows.net/image/cat.jpg" alt="Cat Image">
-<img id="parrotImage" src="https://image2019305009.blob.core.windows.net/image/parrot.jpg" alt="Parrot Image">
+<img id="dogImage" src="https://data2019305009.blob.core.windows.net/image/dog.jpg" alt="Dog Image">
+<img id="catImage" src="https://data2019305009.blob.core.windows.net/image/cat.jpg" alt="Cat Image">
+<img id="parrotImage" src="https://data2019305009.blob.core.windows.net/image/parrot.jpg" alt="Parrot Image">
 
 
 <!-- 결과를 표시할 엘리먼트 추가 -->
